User correct styles in "show_defaults" route and truncate overflowing labels

--- a/modules/ifc_models/app/assets/stylesheets/ifc_viewer/generic.sass
+++ b/modules/ifc_models/app/assets/stylesheets/ifc_viewer/generic.sass
@@ -16,6 +16,9 @@
       flex-direction: column
       height: 100%
 
+  .main-menu--children
+    overflow-x: hidden !important
+
 .ifc-model-viewer--container
   flex-grow: 1
   position: relative
